# hio-zephyr-sdk

./: .editorconfig  .gitignore  Kconfig  Kconfig.defaults  Kconfig.shell  README.md  west.yml
docs/superpowers/specs/: 2026-07-08-hio-info-hooks-design.md
drivers/: CMakeLists.txt  Kconfig  Kconfig.adc_ads122c04  Kconfig.tmp112  adc_ads122c04ex.c  tmp112.c  tmp112.h
dts/bindings/: hardwario,tmp112.yaml  ti,ads122c04ex.yaml  vendor-prefixes.txt
dts/bindings/hio/: hio,atci-uart.yaml
include/drivers/: adc_ads122c04ex.h
include/hio/: hio_accel.h  hio_adc.h  hio_atci.h  hio_buf.h  hio_button.h  hio_cloud.h  hio_config.h  hio_edge.h  hio_info.h  hio_log.h  hio_lte.h  hio_rtc.h  hio_sec.h  hio_sys.h  hio_therm.h  hio_tok.h  hio_util.h  hio_wdog.h
lib/: CMakeLists.txt  Kconfig
lib/hio_tok/: CMakeLists.txt  Kconfig  hio_tok.c
samples/atci/: CMakeLists.txt  VERSION  app.overlay  pm_static.yml  prj.conf
samples/atci/src/: main.c
samples/atci/sysbuild/: mcuboot.conf
samples/hio_log/: prj.conf
samples/hio_log/src/: main.c
scripts/: west-commands.yml
scripts/west_commands/: bin-to-at.py  gen-codec.py  serial-console.py
subsys/: CMakeLists.txt  Kconfig
subsys/hio_accel/: CMakeLists.txt  Kconfig  hio_accel.c  hio_accel_shell.c
subsys/hio_adc/: CMakeLists.txt  Kconfig  hio_adc.c
subsys/hio_atci/: CMakeLists.txt  Kconfig  hio_atci.c  hio_atci.ld  hio_atci_cmd.c  hio_atci_cmd_fw.c  hio_atci_io.h  hio_atci_log_backend.c  hio_atci_login.c  hio_atci_login.h  hio_atci_modem_trace.c  hio_atci_modem_trace.h
subsys/hio_atci/backends/: CMakeLists.txt  Kconfig.backends  hio_atci_uart.c
subsys/hio_buf/: CMakeLists.txt  Kconfig  hio_buf.c
subsys/hio_button/: CMakeLists.txt  Kconfig  hio_button.c
subsys/hio_cloud/: CMakeLists.txt  Kconfig  hio_cloud.c  hio_cloud_backend.h  hio_cloud_cbor.c  hio_cloud_config.c  hio_cloud_config.h  hio_cloud_msg.c  hio_cloud_msg.h  hio_cloud_packet.c  hio_cloud_packet.h  hio_cloud_process.c  hio_cloud_process.h  hio_cloud_shell.c  hio_cloud_transfer.c  hio_cloud_transfer.h  hio_cloud_util.c  hio_cloud_util.h
subsys/hio_config/: CMakeLists.txt  Kconfig  hio_config.c  hio_config_atci.c  hio_config_shell.c
subsys/hio_edge/: CMakeLists.txt  Kconfig  hio_edge.c
subsys/hio_info/: CMakeLists.txt  Kconfig  hio_info.c  hio_info_atci.c  hio_info_ble.c  hio_info_shell.c
subsys/hio_log/: CMakeLists.txt  Kconfig  hio_log.c
subsys/hio_lte/: CMakeLists.txt  Kconfig  hio_lte.c  hio_lte_config.c  hio_lte_config.h  hio_lte_flow.c  hio_lte_flow.h  hio_lte_parse.c  hio_lte_parse.h  hio_lte_shell.c  hio_lte_state.c  hio_lte_state.h  hio_lte_str.c  hio_lte_str.h  hio_lte_talk.c  hio_lte_talk.h  hio_lte_tok.c  hio_lte_tok.h  hio_lte_util.c  hio_lte_util.h
subsys/hio_rtc/: CMakeLists.txt  Kconfig  hio_rtc.c  hio_rtc_nrf54.c  hio_rtc_nrf5x.c
subsys/hio_sec/: CMakeLists.txt  Kconfig  hio_sec.c
subsys/hio_sys/: CMakeLists.txt  Kconfig  hio_sys.c
subsys/hio_therm/: CMakeLists.txt  Kconfig  hio_therm.c  hio_therm_shell.c
subsys/hio_util/: CMakeLists.txt  Kconfig  hio_util.c
subsys/hio_wdog/: CMakeLists.txt  Kconfig  hio_wdog.c
tests/subsys/hio_atci/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/hio_atci/src/: main.c
tests/subsys/hio_cloud_msg/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/hio_cloud_msg/src/: stubs.c  test_dlconfig.c  test_hash.c  test_module.h  test_pack_config.c
tests/subsys/hio_config/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/hio_config/src/: main.c  stubs.c  test_format_line.c  test_module.c  test_parse_line.c  test_show_parity.c
tests/subsys/hio_lte/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/hio_lte/src/: test_parse.c  test_state.c  test_util.c
